fixed z-index

--- a/src/widgets/header/ui/Header.module.scss
+++ b/src/widgets/header/ui/Header.module.scss
@@ -5,7 +5,7 @@
   grid-area: header;
   top: 0;
   position: sticky;
-  z-index: 99;
+  z-index: 1200;
   margin-bottom: var(--spacing-m);
   border-bottom: 1px solid var(--border-tertiary);
   &__container {
